[gd_scene load_steps=6 format=3 uid="uid://b12pefdmopa8m"]

[ext_resource type="Script" path="res://interface/EffectEditorScreen.gd" id="1"]
[ext_resource type="PackedScene" path="res://interface/SpoolSelector.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://dbsyo01hjfm40" path="res://interface/BNumberPropertySelector.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://bs5n6gby2nvhq" path="res://interface/ScriptEditScreen.tscn" id="4"]
[ext_resource type="PackedScene" uid="uid://brytpq56qf318" path="res://interface/EventSelectionInterface.tscn" id="5"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1")

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BNumberProperty" type="ColorRect" parent="TabContainer"]
layout_mode = 2
color = Color(0.0941176, 0.0941176, 0.0941176, 1)

[node name="VBC" type="VBoxContainer" parent="TabContainer/BNumberProperty"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_right = -8.0
offset_bottom = -36.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="TabContainer/BNumberProperty/VBC"]
layout_mode = 2
text = "Set the following property:"

[node name="PropertySelector" parent="TabContainer/BNumberProperty/VBC" instance=ExtResource("3")]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="Label2" type="Label" parent="TabContainer/BNumberProperty/VBC"]
layout_mode = 2
text = "to the value of the following script:"

[node name="ScriptEditingInterface" parent="TabContainer/BNumberProperty/VBC" instance=ExtResource("4")]
layout_mode = 2
size_flags_vertical = 3

[node name="SpoolStatus" type="ColorRect" parent="TabContainer"]
visible = false
layout_mode = 2
color = Color(0.0941176, 0.0941176, 0.0941176, 1)

[node name="VBC" type="VBoxContainer" parent="TabContainer/SpoolStatus"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="TabContainer/SpoolStatus/VBC"]
layout_mode = 2
text = "Set the following property:"

[node name="SpoolSelector" parent="TabContainer/SpoolStatus/VBC" instance=ExtResource("2")]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="Label2" type="Label" parent="TabContainer/SpoolStatus/VBC"]
layout_mode = 2
text = "to the value of the following script:"

[node name="ScriptEditingInterface" parent="TabContainer/SpoolStatus/VBC" instance=ExtResource("4")]
layout_mode = 2
size_flags_vertical = 3

[node name="NextPage" type="ColorRect" parent="TabContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.0980392, 0.0980392, 0.0980392, 1)

[node name="VBC" type="VBoxContainer" parent="TabContainer/NextPage"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_right = -2.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NextPageOptionButton" type="OptionButton" parent="TabContainer/NextPage/VBC"]
layout_mode = 2

[node name="EncounterSelector" parent="TabContainer/NextPage/VBC" instance=ExtResource("5")]
layout_mode = 2

[connection signal="bnumber_property_selected" from="TabContainer/BNumberProperty/VBC/PropertySelector" to="." method="_on_bnumber_effect_target_selected"]
[connection signal="item_selected" from="TabContainer/NextPage/VBC/NextPageOptionButton" to="." method="_on_NextPageOptionButton_item_selected"]
